Revert "FPVTL-2861TestB : refactor for DocumentCategoryService"
This reverts commit 988bc2b47103a9e714a4f3bb15a443e48394bf62.